--- a/index.html
+++ b/index.html
@@ -1,107 +1,206 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Focused Tech Coaching</title>
-    <link rel="stylesheet" href="style.css" />
+
+    <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+
+    <!-- Stylesheet -->
+    <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
 
-    <!-- HERO SECTION -->
-    <header class="hero">
-        <div class="container">
-            <h1>Simple, Stress-Free Tech Help for Your Home.</h1>
-            <p class="subtitle">
-                Streaming setup • Cable cutting • Wi-Fi fixes • Smart home • Cameras • Device training
-            </p>
-            <div class="buttons">
-                <a href="tel:XXX-XXX-XXXX" class="btn primary">Call or Text Me</a>
-                <a href="mailto:focusedtechcoach@gmail.com" class="btn secondary">Email Me</a>
+    <!-- ========================================================= -->
+    <!-- =======================  NAVBAR  ========================= -->
+    <!-- ========================================================= -->
+    <nav class="navbar">
+        <div class="container nav-flex">
+            <div class="logo">FocusedTechCoach</div>
+            <div>
+                <a href="tel:6038330660" class="nav-btn">Call</a>
+                <a href="mailto:focusedtechcoach@gmail.com" class="nav-btn">Email</a>
             </div>
+        </div>
+    </nav>
+
+
+
+    <!-- ========================================================= -->
+    <!-- =====================  HERO SECTION  ===================== -->
+    <!-- ========================================================= -->
+    <header class="hero">
+        <div class="container hero-content">
+
+            <div class="hero-left">
+                <h1>Simple, Stress-Free Tech Help<br>for Your Home.</h1>
+
+                <p class="subtitle">
+                    Streaming setup · Cable cutting · Wi-Fi fixes · Smart home · Cameras · Device training
+                </p>
+
+                <div class="buttons">
+                    <a href="tel:6038330660" class="btn primary">
+                        Call or Text: 603-833-0660
+                    </a>
+
+                    <a href="mailto:focusedtechcoach@gmail.com" class="btn secondary">
+                        Email Me
+                    </a>
+                </div>
+            </div>
+
+            <div class="hero-right">
+                <img src="https://cdn-icons-png.flaticon.com/512/5181/5181869.png" class="hero-img" alt="Technology Icon">
+            </div>
+
         </div>
     </header>
 
-    <!-- SERVICES GRID -->
+
+
+    <!-- ========================================================= -->
+    <!-- =====================  SERVICES SECTION  ================= -->
+    <!-- ========================================================= -->
     <section class="services container">
-        <h2>Services I Offer</h2>
-        <div class="grid">
+
+        <h2>Professional Services</h2>
+        <p class="section-subtitle">
+            Expert setup and support for all your home technology
+        </p>
+
+        <div class="service-grid">
+
+            <!-- Service Card 1 -->
             <div class="card">
+                <img src="https://cdn-icons-png.flaticon.com/512/1995/1995574.png" alt="Streaming Icon">
                 <h3>Streaming Setup</h3>
-                <p>Smart TV, Roku, Fire Stick, and app organization.</p>
+                <p>Smart TVs, Roku, Fire Stick, Apple TV & app organization.</p>
             </div>
+
+            <!-- Service Card 2 -->
             <div class="card">
-                <h3>Cable Cutting Help</h3>
-                <p>Switch from cable to streaming and save money.</p>
+                <img src="https://cdn-icons-png.flaticon.com/512/891/891399.png" alt="Cable Cutting Icon">
+                <h3>Cable Cutting</h3>
+                <p>Replace cable with streaming and save money monthly.</p>
             </div>
+
+            <!-- Service Card 3 -->
             <div class="card">
+                <img src="https://cdn-icons-png.flaticon.com/512/1048/1048877.png" alt="Wi-Fi Icon">
                 <h3>Wi-Fi Improvements</h3>
-                <p>Better speed, stronger signal, router optimization.</p>
+                <p>Better speed, stronger coverage, router optimization.</p>
             </div>
+
+            <!-- Service Card 4 -->
             <div class="card">
-                <h3>Smart Home Installation</h3>
-                <p>Doorbells, speakers, lights, and home automation.</p>
+                <img src="https://cdn-icons-png.flaticon.com/512/3468/3468377.png" alt="Smart Home Icon">
+                <h3>Smart Home Setup</h3>
+                <p>Cameras, doorbells, smart speakers, automations & more.</p>
             </div>
+
+            <!-- Service Card 5 -->
             <div class="card">
+                <img src="https://cdn-icons-png.flaticon.com/512/455/455705.png" alt="Tech Support Icon">
                 <h3>Tech Support & Training</h3>
-                <p>Help with phones, tablets, computers, and more.</p>
+                <p>Phones, tablets, computers, and smart devices.</p>
             </div>
+
+            <!-- Service Card 6 -->
             <div class="card">
+                <img src="https://cdn-icons-png.flaticon.com/512/3064/3064197.png" alt="Camera Icon">
                 <h3>Security Cameras</h3>
-                <p>Indoor/outdoor camera setup & configuration.</p>
+                <p>Indoor/outdoor camera setup, placement & configuration.</p>
             </div>
+
         </div>
+
     </section>
 
-    <!-- ABOUT ME -->
-    <section class="about container">
-        <h2>Meet Your Local Tech Coach</h2>
-        <p>
-            Hi, I’m Josh — I help families and homeowners make their technology simple.
-            I come directly to your home, set everything up correctly, and explain everything
-            in plain English. My goal is to make tech stress-free and easy for everyone.
-        </p>
-    </section>
 
-    <!-- WHY CHOOSE ME -->
-    <section class="why">
-        <div class="container">
-            <h2>Why Choose Me</h2>
-            <div class="grid">
-                <div class="feature">Patient, Friendly Support</div>
-                <div class="feature">Local to Seacoast NH & North Shore MA</div>
-                <div class="feature">No Jargon — Plain English</div>
-                <div class="feature">Fair, Transparent Pricing</div>
+
+    <!-- ========================================================= -->
+    <!-- ======================  ABOUT SECTION  =================== -->
+    <!-- ========================================================= -->
+    <section class="about">
+
+        <div class="container about-flex">
+
+            <div class="about-text">
+                <h2>Meet Your Local Tech Coach</h2>
+
+                <p>
+                    Hi, I'm Josh — your friendly neighborhood tech problem solver.
+                    I help families and homeowners make their technology easy,
+                    organized, and frustration-free. I come to your home,
+                    ensure everything is set up perfectly, then teach you how to use it
+                    in plain English.
+                </p>
             </div>
+
+            <img src="https://cdn-icons-png.flaticon.com/512/847/847969.png" class="about-img" alt="Tech Coach Icon">
+
         </div>
+
     </section>
 
-    <!-- SERVICE AREA -->
+
+
+    <!-- ========================================================= -->
+    <!-- ===================  SERVICE AREA SECTION  =============== -->
+    <!-- ========================================================= -->
     <section class="service-area container">
+
         <h2>Service Area</h2>
-        <p>
-            Serving the Seacoast NH & North Shore MA region:
-            Hampton, Seabrook, Portsmouth, Exeter, Salisbury, Newburyport, Rowley, Amesbury.
-        </p>
-    </section>
+        <p class="section-subtitle">Proudly serving New Hampshire & Massachusetts</p>
 
-    <!-- CALL TO ACTION -->
-    <section class="cta">
-        <div class="container">
-            <h2>Get Tech You Can Count On — Today.</h2>
-            <p>Email: <a href="mailto:focusedtechcoach@gmail.com">focusedtechcoach@gmail.com</a></p>
-            <p>Call or Text: XXX-XXX-XXXX</p>
-            <a href="mailto:focusedtechcoach@gmail.com" class="btn primary">Book an Appointment</a>
+        <div class="area-grid">
+            <div>Hampton</div>
+            <div>Seabrook</div>
+            <div>Portsmouth</div>
+            <div>Exeter</div>
+            <div>Salisbury</div>
+            <div>Newburyport</div>
+            <div>Rowley</div>
+            <div>Amesbury</div>
         </div>
+
     </section>
 
-    <!-- FOOTER -->
+
+
+    <!-- ========================================================= -->
+    <!-- =======================  CTA SECTION  ==================== -->
+    <!-- ========================================================= -->
+    <section class="cta">
+
+        <h2>Ready to Get Started?</h2>
+
+        <p>Call or text anytime:</p>
+        <h3>📞 603-833-0660</h3>
+
+        <p>Email:</p>
+        <h3>📧 focusedtechcoach@gmail.com</h3>
+
+        <a href="mailto:focusedtechcoach@gmail.com" class="btn primary big">
+            Email Me
+        </a>
+
+    </section>
+
+
+
+    <!-- ========================================================= -->
+    <!-- =======================  FOOTER  ========================= -->
+    <!-- ========================================================= -->
     <footer>
-        <p>© 2025 Focused Tech Coaching</p>
-        <p><a href="mailto:focusedtechcoach@gmail.com">Email Me</a></p>
+        <p>© 2025 Focused Tech Coaching • All Rights Reserved</p>
+        <p><a href="mailto:focusedtechcoach@gmail.com">focusedtechcoach@gmail.com</a></p>
     </footer>
 
 </body>
