--- a/index.html
+++ b/index.html
@@ -400,87 +400,70 @@
   <!-- ========================================================= -->
   <!-- ======================= PRICING ========================== -->
   <!-- ========================================================= -->
-  <section id="pricing" class="py-14 md:py-16 bg-gray-50 border-b border-gray-200">
-    <div class="max-w-6xl mx-auto px-4">
-      <div class="text-center mb-10 fade-up">
-        <p class="text-xs font-semibold tracking-[0.2em] uppercase text-blue-600 mb-2">
-          Simple, Transparent Pricing
-        </p>
-        <h2 class="text-2xl md:text-3xl font-bold mb-3">Home Tech Visit Options</h2>
-        <p class="text-gray-600 text-sm md:text-base max-w-2xl mx-auto">
-          Most visits fall into one of these options. If you’re not sure what you need, just call or text and I’ll help
-          you pick the best fit.
-        </p>
-      </div>
-
-      <div class="grid md:grid-cols-3 gap-6 fade-up">
-        <!-- Basic -->
-        <div class="glass-card rounded-2xl p-7 shadow-sm border border-gray-100 flex flex-col">
-          <p class="text-xs font-semibold uppercase text-gray-500 mb-1">Quick Fix</p>
-          <h3 class="text-lg font-bold mb-1">Basic Visit</h3>
-          <p class="text-sm text-gray-600 mb-4">Small issues or a couple of questions.</p>
-          <p class="text-3xl font-extrabold mb-1">$50</p>
-          <p class="text-xs text-gray-500 mb-4">Starting from</p>
-          <ul class="text-sm text-gray-600 space-y-1 mb-4">
-            <li>• Simple troubleshooting</li>
-            <li>• App or device help</li>
-            <li>• Remote or in-person (when available)</li>
-          </ul>
-          <div class="mt-auto">
-            <a href="tel:6038330660"
-              class="inline-flex items-center gap-2 text-sm font-semibold text-blue-600 hover:text-blue-700">
-              <i data-lucide="phone" class="w-4 h-4"></i> Ask if this fits your issue
-            </a>
-          </div>
-        </div>
-
-        <!-- Standard (highlight) -->
-        <div
-          class="glass-card rounded-2xl p-7 shadow-md border border-blue-200 bg-gradient-to-b from-white via-white to-blue-50 flex flex-col">
-          <p class="text-xs font-semibold uppercase text-blue-600 mb-1">Most Popular</p>
-          <h3 class="text-lg font-bold mb-1">Standard Home Visit</h3>
-          <p class="text-sm text-gray-600 mb-4">Perfect for streaming, Wi-Fi, and smart home projects.</p>
-          <p class="text-3xl font-extrabold mb-1">$99</p>
-          <p class="text-xs text-gray-500 mb-4">Typical home visit</p>
-          <ul class="text-sm text-gray-600 space-y-1 mb-4">
-            <li>• TV & streaming setup</li>
-            <li>• Wi-Fi optimization</li>
-            <li>• Basic smart home or camera setup</li>
-            <li>• Time for questions & training</li>
-          </ul>
-          <div class="mt-auto">
-            <a href="tel:6038330660"
-              class="inline-flex items-center justify-center w-full gap-2 bg-blue-600 hover:bg-blue-700 text-white text-sm font-semibold px-4 py-2 rounded-full">
-              <i data-lucide="phone-call" class="w-4 h-4"></i>
-              Call to Check Availability
-            </a>
-          </div>
-        </div>
-
-        <!-- Premium -->
-        <div class="glass-card rounded-2xl p-7 shadow-sm border border-gray-100 flex flex-col">
-          <p class="text-xs font-semibold uppercase text-gray-500 mb-1">Whole-Home Project</p>
-          <h3 class="text-lg font-bold mb-1">Premium Visit</h3>
-          <p class="text-sm text-gray-600 mb-4">Larger projects or full tech refresh.</p>
-          <p class="text-3xl font-extrabold mb-1">$150+</p>
-          <p class="text-xs text-gray-500 mb-4">Custom quote</p>
-          <ul class="text-sm text-gray-600 space-y-1 mb-4">
-            <li>• Multiple rooms / devices</li>
-            <li>• Whole-home Wi-Fi & streaming</li>
-            <li>• Advanced smart home or cameras</li>
-            <li>• Follow-up support options</li>
-          </ul>
-          <div class="mt-auto">
-            <a href="mailto:focusedtechcoach@gmail.com"
-              class="inline-flex items-center gap-2 text-sm font-semibold text-blue-600 hover:text-blue-700">
-              <i data-lucide="mail" class="w-4 h-4"></i> Email for a custom estimate
-            </a>
-          </div>
-        </div>
-      </div>
+ <section id="pricing" class="py-14 md:py-16 bg-gray-50 border-b border-gray-200">
+  <div class="max-w-6xl mx-auto px-4">
+    
+    <div class="text-center mb-10 fade-up">
+      <p class="text-xs font-semibold tracking-[0.2em] uppercase text-blue-600 mb-2">
+        Simple, Transparent Pricing
+      </p>
+      <h2 class="text-2xl md:text-3xl font-bold mb-3">Home Tech Visit Options</h2>
+      <p class="text-gray-600 text-sm md:text-base max-w-2xl mx-auto">
+        Most visits fall into one of these options. If you’re not sure what you need, just call or text and I’ll help you pick the best fit.
+      </p>
     </div>
-  </section>
 
+    <div class="grid md:grid-cols-2 gap-6 fade-up">
+
+      <!-- 90-Minute In-Home Visit -->
+      <div class="glass-card rounded-2xl p-7 shadow-sm border border-gray-200 bg-white flex flex-col">
+        <p class="text-xs font-semibold uppercase text-gray-500 mb-1">In-Home Session</p>
+        <h3 class="text-lg font-bold mb-1">90-Minute In-Home Visit</h3>
+        <p class="text-sm text-gray-600 mb-4">Perfect for Wi-Fi issues, streaming, smart home setup, or multiple devices.</p>
+
+        <p class="text-3xl font-extrabold mb-1">$90</p>
+        <p class="text-xs text-gray-500 mb-4">Flat rate for up to 90 minutes</p>
+
+        <ul class="text-sm text-gray-600 space-y-1 mb-4">
+          <li>• Tech help in the comfort of your home</li>
+          <li>• Wi-Fi, streaming, smart home, cameras, devices</li>
+          <li>• Follow-up rate: $45 per hour</li>
+        </ul>
+
+        <div class="mt-auto">
+          <a href="tel:6038330660"
+            class="inline-flex items-center gap-2 text-sm font-semibold text-blue-600 hover:text-blue-700">
+            <i data-lucide="phone" class="w-4 h-4"></i> Call to Book Your Visit
+          </a>
+        </div>
+      </div>
+
+      <!-- Zoom Session -->
+      <div class="glass-card rounded-2xl p-7 shadow-sm border border-gray-200 bg-white flex flex-col">
+        <p class="text-xs font-semibold uppercase text-gray-500 mb-1">Virtual Session</p>
+        <h3 class="text-lg font-bold mb-1">45-Minute Zoom One-on-One</h3>
+        <p class="text-sm text-gray-600 mb-4">Great for troubleshooting, tech coaching, app help, and account setup.</p>
+
+        <p class="text-3xl font-extrabold mb-1">$45</p>
+        <p class="text-xs text-gray-500 mb-4">45-minute live session</p>
+
+        <ul class="text-sm text-gray-600 space-y-1 mb-4">
+          <li>• Personalized tech coaching</li>
+          <li>• PC, Mac, tablets, smartphones</li>
+          <li>• App setup, accounts, organizing devices</li>
+        </ul>
+
+        <div class="mt-auto">
+          <a href="mailto:focusedtechcoach@gmail.com"
+            class="inline-flex items-center gap-2 text-sm font-semibold text-blue-600 hover:text-blue-700">
+            <i data-lucide="mail" class="w-4 h-4"></i> Email to Schedule Session
+          </a>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</section>
 
   <!-- ========================================================= -->
   <!-- ==================== TESTIMONIALS ======================= -->
