--- a/index.html
+++ b/index.html
@@ -409,54 +409,74 @@
       </p>
       <h2 class="text-2xl md:text-3xl font-bold mb-3">Home Tech Visit Options</h2>
       <p class="text-gray-600 text-sm md:text-base max-w-2xl mx-auto">
-        Most visits fall into one of these options. If you’re not sure what you need, just call or text and I’ll help you pick the best fit.
+        Most visits fall into one of these options. If you’re not sure what you need, just call, text, or email and I’ll help you pick the best fit.
       </p>
     </div>
 
     <div class="grid md:grid-cols-2 gap-6 fade-up">
 
       <!-- 90-Minute In-Home Visit -->
-      <div class="glass-card rounded-2xl p-7 shadow-sm border border-gray-200 bg-white flex flex-col">
+      <div class="rounded-2xl p-7 shadow-sm border border-gray-200 bg-white flex flex-col">
         <p class="text-xs font-semibold uppercase text-gray-500 mb-1">In-Home Session</p>
         <h3 class="text-lg font-bold mb-1">90-Minute In-Home Visit</h3>
-        <p class="text-sm text-gray-600 mb-4">Perfect for Wi-Fi issues, streaming, smart home setup, or multiple devices.</p>
+        <p class="text-sm text-gray-600 mb-4">
+          Perfect for Wi-Fi issues, streaming, smart home setup, or multiple devices.
+        </p>
 
         <p class="text-3xl font-extrabold mb-1">$90</p>
         <p class="text-xs text-gray-500 mb-4">Flat rate for up to 90 minutes</p>
 
-        <ul class="text-sm text-gray-600 space-y-1 mb-4">
-          <li>• Tech help in the comfort of your home</li>
-          <li>• Wi-Fi, streaming, smart home, cameras, devices</li>
+        <ul class="text-sm text-gray-600 space-y-1 mb-6">
+          <li>• In-home tech help</li>
+          <li>• Wi-Fi, streaming, smart home, cameras</li>
           <li>• Follow-up rate: $45 per hour</li>
         </ul>
 
-        <div class="mt-auto">
-          <a href="tel:6038330660"
-            class="inline-flex items-center gap-2 text-sm font-semibold text-blue-600 hover:text-blue-700">
-            <i data-lucide="phone" class="w-4 h-4"></i> Call to Book Your Visit
+        <!-- Contact Options -->
+        <div class="mt-auto flex flex-col gap-2 text-sm font-semibold">
+          <a href="tel:6038330660" class="text-blue-600 hover:text-blue-700 flex items-center gap-2">
+            <i data-lucide="phone" class="w-4 h-4"></i> Call 603-833-0660
+          </a>
+
+          <a href="sms:6038330660" class="text-blue-600 hover:text-blue-700 flex items-center gap-2">
+            <i data-lucide="message-circle" class="w-4 h-4"></i> Text Me
+          </a>
+
+          <a href="mailto:focusedtechcoach@gmail.com" class="text-blue-600 hover:text-blue-700 flex items-center gap-2">
+            <i data-lucide="mail" class="w-4 h-4"></i> Email Me
           </a>
         </div>
       </div>
 
       <!-- Zoom Session -->
-      <div class="glass-card rounded-2xl p-7 shadow-sm border border-gray-200 bg-white flex flex-col">
+      <div class="rounded-2xl p-7 shadow-sm border border-gray-200 bg-white flex flex-col">
         <p class="text-xs font-semibold uppercase text-gray-500 mb-1">Virtual Session</p>
         <h3 class="text-lg font-bold mb-1">45-Minute Zoom One-on-One</h3>
-        <p class="text-sm text-gray-600 mb-4">Great for troubleshooting, tech coaching, app help, and account setup.</p>
+        <p class="text-sm text-gray-600 mb-4">
+          Great for troubleshooting, tech coaching, app help, account setup, and device training.
+        </p>
 
         <p class="text-3xl font-extrabold mb-1">$45</p>
         <p class="text-xs text-gray-500 mb-4">45-minute live session</p>
 
-        <ul class="text-sm text-gray-600 space-y-1 mb-4">
+        <ul class="text-sm text-gray-600 space-y-1 mb-6">
           <li>• Personalized tech coaching</li>
           <li>• PC, Mac, tablets, smartphones</li>
-          <li>• App setup, accounts, organizing devices</li>
+          <li>• App setup, accounts, device organization</li>
         </ul>
 
-        <div class="mt-auto">
-          <a href="mailto:focusedtechcoach@gmail.com"
-            class="inline-flex items-center gap-2 text-sm font-semibold text-blue-600 hover:text-blue-700">
-            <i data-lucide="mail" class="w-4 h-4"></i> Email to Schedule Session
+        <!-- Contact Options -->
+        <div class="mt-auto flex flex-col gap-2 text-sm font-semibold">
+          <a href="tel:6038330660" class="text-blue-600 hover:text-blue-700 flex items-center gap-2">
+            <i data-lucide="phone" class="w-4 h-4"></i> Call 603-833-0660
+          </a>
+
+          <a href="sms:6038330660" class="text-blue-600 hover:text-blue-700 flex items-center gap-2">
+            <i data-lucide="message-circle" class="w-4 h-4"></i> Text Me
+          </a>
+
+          <a href="mailto:focusedtechcoach@gmail.com" class="text-blue-600 hover:text-blue-700 flex items-center gap-2">
+            <i data-lucide="mail" class="w-4 h-4"></i> Email Me
           </a>
         </div>
       </div>
