Refactor service area section in index.html

--- a/index.html
+++ b/index.html
@@ -556,40 +556,30 @@
   <!-- ========================================================= -->
   <!-- ==================== SERVICE AREA ======================== -->
   <!-- ========================================================= -->
-  <section class="py-14 md:py-16 bg-gray-50 border-b border-gray-200">
-    <div class="max-w-6xl mx-auto px-4">
-      <div class="text-center mb-8 fade-up">
-        <p class="text-xs font-semibold tracking-[0.2em] uppercase text-blue-600 mb-2">
-          Where I Work
-        </p>
-        <h2 class="text-2xl md:text-3xl font-bold mb-3">Serving the Seacoast & North Shore</h2>
-        <p class="text-gray-600 text-sm md:text-base max-w-2xl mx-auto">
-          In-home visits are available across the Seacoast NH area and nearby Massachusetts towns. Remote sessions are
-          available from anywhere.
-        </p>
-      </div>
+ <section class="py-20 bg-gray-50 border-t border-gray-200">
+  <div class="max-w-5xl mx-auto text-center px-6">
+    
+    <p class="text-xs tracking-[0.2em] uppercase text-blue-600 mb-2">Where I Work</p>
+    <h2 class="text-3xl md:text-4xl font-bold mb-4">Serving the Seacoast & North Shore</h2>
 
-      <div class="grid sm:grid-cols-2 md:grid-cols-4 gap-4 fade-up">
-        {[
-          "Hampton",
-          "Seabrook",
-          "Portsmouth",
-          "Exeter",
-          "Salisbury",
-          "Newburyport",
-          "Rowley",
-          "Amesbury"
-        ].map((area, index) => `
-        <div class="glass-card rounded-xl p-4 text-center shadow-sm border border-gray-100">
-          <div class="flex items-center justify-center gap-2 text-sm font-semibold text-gray-800">
-            <i data-lucide="map-pin" class="w-4 h-4 text-blue-600"></i>
-            <span>${area}</span>
-          </div>
-        </div>`).join("")}
-      </div>
+    <p class="text-gray-600 max-w-2xl mx-auto mb-10">
+      In-home visits are available across the Seacoast NH area and nearby Massachusetts towns. 
+      Remote sessions are available from anywhere.
+    </p>
+
+    <div class="grid grid-cols-2 md:grid-cols-4 gap-4">
+      <div class="bg-white shadow-sm border rounded-xl py-4 text-gray-800">Hampton</div>
+      <div class="bg-white shadow-sm border rounded-xl py-4 text-gray-800">Seabrook</div>
+      <div class="bg-white shadow-sm border rounded-xl py-4 text-gray-800">Portsmouth</div>
+      <div class="bg-white shadow-sm border rounded-xl py-4 text-gray-800">Exeter</div>
+      <div class="bg-white shadow-sm border rounded-xl py-4 text-gray-800">Salisbury</div>
+      <div class="bg-white shadow-sm border rounded-xl py-4 text-gray-800">Newburyport</div>
+      <div class="bg-white shadow-sm border rounded-xl py-4 text-gray-800">Rowley</div>
+      <div class="bg-white shadow-sm border rounded-xl py-4 text-gray-800">Amesbury</div>
     </div>
-  </section>
 
+  </div>
+</section>
 
   <!-- ========================================================= -->
   <!-- ========================= CTA ============================ -->
