Change label from 'Address' to 'City and State'

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
             </div>
 
             <div>
-              <label class="text-sm font-medium">Address (optional)</label>
+              <label class="text-sm font-medium">City and State (optional)</label>
               <input id="address" type="text"
                 class="w-full mt-1 rounded-xl border p-2 text-sm focus:ring-2 focus:ring-blue-500" />
             </div>
