--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Focused Tech Coaching – Home Tech Help, WiFi Fixes, Streaming Setup</title>
+  <title>Focused Tech Coach – Home Tech Help, WiFi Fixes, Streaming Setup</title>
 
   <!-- ======================= SEO META TAGS ======================= -->
   <meta name="description"
-    content="Focused Tech Coaching helps families and homeowners with streaming setup, cable cutting, WiFi fixes, smart home installation, camera setup, and device training. Serving Seacoast NH & North Shore MA. Call 603-833-0660." />
+    content="Focused Tech Coach helps families and homeowners with streaming setup, cable cutting, WiFi fixes, smart home installation, camera setup, and device training. Serving Seacoast NH & North Shore MA. Call 603-833-0660." />
   <meta name="keywords"
     content="tech help, home tech support, streaming setup, Roku help, WiFi fixes, cable cutting, smart home installation, Hampton NH tech help, Seacoast NH tech support" />
   <meta name="author" content="Focused Tech Coaching" />
 
   <!-- Open Graph (Social Sharing) -->
-  <meta property="og:title" content="Focused Tech Coaching – Simple, Stress-Free Tech Help" />
+  <meta property="og:title" content="Focused Tech Coach – Simple, Stress-Free Tech Help" />
   <meta property="og:description"
     content="WiFi fixes, streaming setup, cable cutting, smart home installation, camera setup, and tech training. Call 603-833-0660." />
   <meta property="og:image" content="https://focusedtechcoach.com/preview.jpg" />
