Add booking calendar iframe to index.html

--- a/index.html
+++ b/index.html
@@ -95,6 +95,15 @@
 
 <body class="text-gray-900">
 
+  <!-- ===================== BOOKING CALENDAR (TOP OF PAGE) ===================== -->
+  <section class="bg-white border-b border-gray-200">
+    <div class="max-w-6xl mx-auto px-4 py-6">
+      <iframe src="https://api.leadconnectorhq.com/widget/booking/p0JqCN7BAhyIIK9e0seB"
+        style="width: 100%; border:none; overflow: hidden;" scrolling="no"
+        id="p0JqCN7BAhyIIK9e0seB_1764995698318"></iframe><br>
+    </div>
+  </section>
+  <script src="https://link.msgsndr.com/js/form_embed.js" type="text/javascript"></script>
   <!-- ========================= NAVBAR ========================= -->
   <header class="bg-white shadow-sm">
     <div class="max-w-6xl mx-auto px-4 py-3 flex items-center justify-between">
@@ -268,7 +277,7 @@
     <div class="max-w-6xl mx-auto px-4">
       <div class="text-center mb-10 fade-up">
         <p class="text-xs font-semibold tracking-[0.2em] uppercase text-blue-600 mb-2">How I Can Help</p>
-        <h2 class="text-2xl md:text-3xl font-bold mb-3">Home Tech Services</h2>
+        <h2 class="text-2xl md:3xl font-bold mb-3">Home Tech Services</h2>
         <p class="text-gray-600 max-w-2xl mx-auto text-sm md:text-base">
           Whether it's your TV, router, streaming apps, smart home devices, or security cameras, I handle everything so
           your tech works the way you want it to.
